fix: button nowrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -723,6 +723,7 @@ footer *{
   background-color: var(--accent-color);
   padding: 15px;
   margin: 20px;
+  white-space: nowrap;
 }
 
 .footer-index a, .footer-index li{
@@ -751,6 +752,10 @@ footer *{
     flex-direction: column;
     align-items: start;
     padding: 0 30px;
+  }
+
+  .abonner {
+    margin: 20px 0;
   }
 
   .footer-links, .footer-icons {
